<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for select category bottom sheet -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Category text -->
    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/activity_add_edit_transaction_category"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Select payee text -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:includeFontPadding="false"
        android:text="@string/activity_add_edit_transaction_select_payee"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

    <!-- Divider -->
    <View
        android:id="@+id/vDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/divider_add_edit_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Category list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="126dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_bottom_sheet" />

    <!-- To be budgeted text -->
    <TextView
        android:id="@+id/tvToBeBudgeted"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/activity_add_edit_transaction_to_be_budgeted"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vDivider" />

    <!-- Divider -->
    <View
        android:id="@+id/vDivider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/divider_add_edit_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvToBeBudgeted" />

</androidx.constraintlayout.widget.ConstraintLayout>