<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for budgeting fragment -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Appbar layout  -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_budget">

            <!-- SetMonthFragment -->
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerSetMonth"
                android:name="com.titaniel.zerobasedbudgetingapp.fragments.fragment_set_month.SetMonthFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.MaterialToolbar>

        <!-- To be budgeted value -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvToBeBudgeted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textSize="36sp"
            app:autoSizeTextType="uniform"
            tools:text="5000,00 €" />

        <!-- Headers container -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp">

            <!-- Category header -->
            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_budget_category_margin"
                android:includeFontPadding="false"
                android:text="@string/fragment_budget_category"
                android:textSize="14sp" />

            <!-- Budgeted header -->
            <TextView
                android:id="@+id/tvBudgeted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/fragment_budget_budgeted_margin"
                android:includeFontPadding="false"
                android:text="@string/fragment_budget_budgeted"
                android:textSize="14sp" />

            <!-- Available header -->
            <TextView
                android:id="@+id/tvAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/fragment_budget_available_margin"
                android:includeFontPadding="false"
                android:text="@string/fragment_budget_available"
                android:textSize="14sp" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- List of transaction items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listBudgeting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:listitem="@layout/item_budget" />

</androidx.constraintlayout.widget.ConstraintLayout>